--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,34 @@
 name: Docker pipeline workflow
 on:
   workflow_dispatch:
-  
+    # allow manual triggering
+
   schedule:
-    # build every Sunday
+    # trigger every Sunday
     - cron:  '* * * * 0'    
   
   push:
+    # trigger when a tag is pushed
     tags:
       - '*'
 jobs:
   publish:
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
     steps:
+
       - name: "Check out code"
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      - name: Checkout latest release tag
+        run: |
+          LATEST_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
+          git checkout $LATEST_TAG
+
       - name: "make version"
         run: make version
+
       - name: "make push"
         run: make push
         env: 
